[metadata]
url = https://github.com/mattboyer/sqbrite
author = Matt Boyer
author_email = mboyer@sdf.org
name = sqbrite
description = SQBrite is a data recovery tool for SQLite databases
long_description = file: README.rst
classifiers =
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: Science/Research
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Topic :: Database
	Topic :: System :: Recovery Tools

[options]
package_dir =
	sqbrite = src
packages = find:
include_package_data = True
install_requires =
	pyxdg
	pyyaml

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
	sqbrite = sqbrite.sqlite_recover:main
